
SET(HANDLERS
	simple.c
	brk.c
	uname.c
	mmap2.c
	open.c
	fstat64.c
	close.c
	stat64.c
	read.c
	set_thread_area.c
	mprotect.c
	munmap.c
	set_tid_address.c
	set_robust_list.c
	rt_sigaction.c
	rt_sigprocmask.c
	sigprocmask.c
	ugetrlimit.c
	write.c
	nanosleep.c
	ioctl.c
	ioctl_tty.c
	fcntl64.c
	getdents64.c
	exit_group.c
	time.c
	socketcall.c
	socket.c
	bind.c
	getsockname.c
	sendto.c
	recvfrom.c
	recvmsg.c
	connect.c
	_newselect.c
	recv.c
	_llseek.c
	clock_getres.c
	lstat64.c
	getpeername.c
	futex.c
	clock_gettime.c
	getcwd.c
	setsockopt.c
	listen.c
	poll.c
	accept.c
	writev.c
	sendfile64.c
	shutdown.c
	getrusage.c
	gettimeofday.c
	pipe.c
	clone.c
	kill.c
	waitpid.c
	send.c
	dup.c
	dup2.c
	wait4.c
	socketpair.c
	ioctl_blk.c
	sendmsg.c
	setitimer.c
	epoll_wait.c
	)

ADD_LIBRARY(checkpoint
	checkpoint.c
	checkpoint.h
	syscall_table.c
	syscall_table.h
	${HANDLERS}
	)

ADD_LIBRARY(printer
	checkpoint.h
	syscall_table.c
	syscall_table.h
	${HANDLERS}
	)

SET_TARGET_PROPERTIES(
	printer
	PROPERTIES COMPILE_FLAGS -DSYSCALL_PRINTER
	)

